@@ -33,7 +33,9 @@ void svg_close(void);
 void svg_commentf(const char *format, ...);
 void svg_image(const char *name, double width, double height);
 
-void svg_group_start(const char *cls, double scale, double x, double y);
+void svg_group_start(const char *cls, double rotate,
+                     double scalex, double scaley,
+                     double x, double y);
 void svg_group_end(void);
 
 void svg_path_start(const char *cls, double scale, double x, double y);
